# tracks

./: .gitignore  CMakeLists.txt  README.md  main.cpp  task.txt
qml/: main.qml
src/: csvreader.cpp  csvreader.h  trackmanager.cpp  trackmanager.h
tracks/: broken.csv  track_1.csv  track_2.csv  track_3.csv  track_4.csv  track_5.csv
